# Tertiary

./: .gitignore  CMakeLists.txt  config.cmake
.github/actions/cmake-build/: action.yml
.github/actions/macos-pkg/: action.yml
.github/actions/ssh-backup/: action.yml
.github/actions/windows_pkg.yml/: action.yml
.github/actions/wordpress/: action.yml
.github/workflows/: cmake.yml  release.yml
.github/workflows/source/: backup  macos_pkg.yml  ssh_backup.yml  windows_pkg.yml  wordpress.yml
package_config/: installer_win.iss.in
package_config/mac/: Info.plist.in  distribution-demo.xml  distribution-full.xml  distribution.xml
plugin/: CMakeLists.txt  createSourceList.py
plugin/images/: CMakeLists.txt
plugin/source/: AboutWindow.cpp  AboutWindow.h  ActivatorWindow.h  AllColors.h  BandControls.cpp  BandControls.h  Cursor.h  FreqLabel.h  FrequencyResponse.cpp  FrequencyResponse.h  GlobalControls.cpp  GlobalControls.h  InputOutputGain.cpp  InputOutputGain.h  LFO.h  LockFreeQueue.h  MyLookAndFeel.cpp  MyLookAndFeel.h  OptionsMenu.h  Oscilloscope.cpp  Oscilloscope.h  Params.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScopeChannel.h  ScrollPad.cpp  ScrollPad.h  TopBanner.cpp  TopBanner.h  UtilityFunctions.cpp  UtilityFunctions.h  WLDebugger.h  WindowWrapperFrequency.cpp  WindowWrapperFrequency.h  WindowWrapperOscilloscope.cpp  WindowWrapperOscilloscope.h  avir.h
run_local/: _runlocalmac.sh  _runlocalwin.bat  readme_mac
